--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
@@ -3,7 +3,7 @@
 
   
 
-## Lesson Objective:
+## Lesson Objective
 
 In this lesson you will learn how to solve various visual and thinking question with logical analysis and thinking
 
@@ -17,7 +17,7 @@ The way you will use to solve such questions, will enhance your thinking and wil
 
   
 
-## About the lesson:
+## About the lesson
 
   
 
@@ -40,7 +40,7 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
 
-## Picture equations:
+## Picture equations
 
   
 
@@ -52,45 +52,39 @@ These are the equations consisting of images of different objects as variables a
 
 **Way of thinking and dealing with such questions?**
 
-As you can see, it's looking more like a mathematical problem, which is asking you to solve some equations. Now, you all might have studied how to solve multivariable equations during your school days, just try to think in that particular way.
+>As you can see, it's looking more like a mathematical problem, which is asking you to solve some equations. Now, you all might have studied how to solve multivariable equations during your school days, just try to think in that particular way.
 
   
 
-Example 1:
+**Example 1**
 
-![](https://lh6.googleusercontent.com/N_IGgcDUd4GS6Sd6_aOWRkapVwDTR1BJ8t2dLDreDVLIqdKSBHKdQ-DMnEDUVJK1qchHbNGHkJOkolR6amou1HWoW5n7QrBuowvjw2IMprAJDd-F1dXdc0wRftsPBjxEuVPv40XU-IzLl-xGhA)
+![image](/Problem-Solving/_3image1.png)
 
-  
-
-**How to approach:**
+**How to approach**
 
 Yes, you are thinking right. Just assign a unique English character to to same type of objects. In example 1, I am taking blue box as ‘B’, red box as ‘R’ and green box as ‘G’ (You can choose any variable name as per your choice) and just write down on the paper, the equations, which you are getting now. And just solve them in the manner you used to solve during your 10th class and after you get the values for all variables, substitute the values of variables into the object image to which that variable is pointing.
 
   
 
-![](https://lh4.googleusercontent.com/pHVN-_8hionu50rzHhKeuZshdeg82pvZcZN2Jr3mzNEf_mg34vCpDeYOISkjLWIUMoM3yEdaPsXP4Zg6JNIFMD4oHZopFhV-fK-tDMKfs6_uJ953qCvV_O1GPnIYaEL_f_Zngg8GcwNrigVxCA)
+![image](/Problem-Solving/_3image2.png)
 
-**Follow on:**
+**Follow on**
 
-Now try to solve remaining examples on you own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
-
-  
-
-**Follow on Questions:**
+>Now try to solve remaining examples on you own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
 
-![](https://lh5.googleusercontent.com/yj5OFtAdCf2IVZ9DIYDQi7NZ_iNQmpDXS-2aLwWFvPqyZawZc8HVQhXydLelJNn65aYDCRXJdauQzta9A_K69s8-AfH7VztCzFGLEoZrPCq8zFbEOiUN_Pv9KEcck6T9eTBN4_2dWaTqcfP75w)
-
-  
-  
-
-![](https://lh6.googleusercontent.com/qun0WifLHpst0NJkOhwpuZe7RmlP_9gkWTI3AXDyiWV-4AcH2_NavryPPiqSHKrTYxnqy2k4H1kfVYBtevp5nsjvSDjQPkr22fjfX4SugmbQFZw2zo1bTzHD3k5WVluT4ifgITU4eX4Ci0t4qQ)
+**Follow on Questions**
 
   
 
-![](https://lh5.googleusercontent.com/QnWiCKhCSsOCWZ3-IOeiDkQnnCEzrOhunvLNA1jhUOoobPVABiEvsVgMLELZoZOimZbUsf69U81shlyZwUeWlbR5ujBlcaIZeT6jEvXTgS8gaP_yVUfKa0aDR95FXaQD46rmgwL6oTFVvA7PSg)
+![image](/Problem-Solving/_3image3.png)
+  
 
+![image](/Problem-Solving/_3image4.png)
+  
+
+![image](/Problem-Solving/_3image5.png)
   
   
   
@@ -98,19 +92,18 @@ Now try to solve remaining examples on you own. Hope you got the way to solve su
   
   
 
-**Solutions to follow on questions:**
+**Solutions to follow on questions**
 
   
 
-![](https://lh4.googleusercontent.com/c78iFO4INB4JO4_ZQIzPpVLBDvbZX205BdXDKqkKPta1XJkP2XWeCN6JNEuABoWrBg6qBOIWTciXUMy-uJlkAGKLk_e_3WZnPibmno-3y50kX2FFpaI5H3wtANv-PvrmkAkza8pL2Xh3tAnEAw)
+![image](/Problem-Solving/_3image6.png)
 
-![](https://lh6.googleusercontent.com/j_jBytxzZJFMym_6bKo4pkoefTfMVmmxtIhkaMHo0F_neB9phMoVQTzbqeALZP0GyDc0KymvX12Atg1MLrwG0nqwgq-Gv5Knzt4hCFhiTNCZ3l6TVjTyd7jI2TnWXCpKI7zAutDeXgzpoQMmcA)
+![image](/Problem-Solving/_3image7.png)
 
-![](https://lh6.googleusercontent.com/C58GmT7JidpAYjtyRq0DYL9IqHvBcliynpBK_NyB5o-I1dKzfYqk9bcsZ9SJr1MPealy_zPvw6zfsY2A4EJCiD2Emj9d01Ol_5bHls_jIcYoB-mb4Cd1z2AziPXKkgMtH0IsjMdeHHwCZeP2Kw)
-
+![image](/Problem-Solving/_3image8.png)
   
 
-## Inductive Reasoning:
+## Inductive Reasoning
 
   
 
@@ -122,17 +115,16 @@ Here you will get 2 images and you have to visualize the common trend they are f
 
 **Way of thinking and dealing such questions?**
 
-As you can see, it's looking more like an intuitive problem. You have to fully scan both the images on the left side. Now try to visualise the similarity between both the images. Usually, they might have all the same elements in a row or in a column or in a diagonal etc. So, there are various possibilities of similarity among them but try to find a more intuitive and generalised similarity between the images.
+>As you can see, it's looking more like an intuitive problem. You have to fully scan both the images on the left side. Now try to visualise the similarity between both the images. Usually, they might have all the same elements in a row or in a column or in a diagonal etc. So, there are various possibilities of similarity among them but try to find a more intuitive and generalised similarity between the images.
 
   
 
-Example 1:
+**Example 1**
 
-![](https://lh5.googleusercontent.com/DVNu4o2BELe8GE3pU1GxbYTBtE-RjxP3DJBkicQHT2Ppwen4WRVeb_0auLvsUbEYuvjqV8jyWWHl-JW1kCm72wiX5PqTTOAqvS5pIzR3-upgTrxmTGddLgYsWebBI07l-zMXdQTvZ4N3cT267w)
-
+![image](/Problem-Solving/_3image9.png)
   
 
-**How to approach:**
+**How to approach**
 
 Yes, you are thinking right. You can solve this in two ways:
 
@@ -152,22 +144,21 @@ Yes, you are thinking right. You can solve this in two ways:
 
   
 
-Now, in the first example, by following strategy 2, we will get the answer as you can see there are similar types of objects on the main diagonal in both the figures. So, kudos you got it right.
+>Now, in the first example, by following strategy 2, we will get the answer as you can see there are similar types of objects on the main diagonal in both the figures. So, kudos you got it right.
 
   
 
-![](https://lh6.googleusercontent.com/b5Jp622YGDzOMVKF-MVsmZbyfo-8ov79O9fmeAtXO8ykuM3zFzs_OTk2igDau0wqtshJKAmiCZWJPh9_imBTdfl4pBSLRaVIjCzi5RJiQBG8mCa1caR8uN_ug03Gu45RnweL7JFO_O9UFjbVXQ)
-
+![image](/Problem-Solving/_3image10.png)
   
 
-(YES, THIS IS THE ONLY STRATEGY WE USE WHILE SOLVING IMPLEMENTATION BASED BRUTE FORCE QUESTIONS)
+>(YES, THIS IS THE ONLY STRATEGY WE USE WHILE SOLVING IMPLEMENTATION BASED BRUTE FORCE QUESTIONS)
 
   
   
 
-**Follow on:**
+**Follow on**
 
-Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
+>Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
   
@@ -180,28 +171,25 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
 
   
 
-![](https://lh5.googleusercontent.com/1-sitGY7LlJIz0BuXGHjW1HBOaM5o3akRAKRXwBRZpZ6sj8j8PXzVEb9gciB4EpwaxEU_Qx8WVtgCxi2CbjUvOgJFb46bRYSpLtyCYDP1fkywcpT96s14st-dsjjOOGDARNx-Yz_3GtN2Mx_Bg)
-
+![image](/Problem-Solving/_3image11.png)
   
 
-![](https://lh4.googleusercontent.com/6Hdr-UQAGSNoyRn6YXAJYXVWfOGQ3w8e4RP6VJc2QgFqnFpZ4y1SrmQwvSj5IPmaHFxT4BdepqIQdYnJx8au0YXgT2YAaYp-oEJlMXdaxNOQXnE7jBTdCtdOuyFQxkX9J2McfzaAMVhub7rEzg)
+![image](/Problem-Solving/_3image12.png)
 
-![](https://lh5.googleusercontent.com/hx1pAwKNGGhd62eNRHaa-M84DZVxUP6IO9_iFrbcWp-ng4QTYz-nhRH_wmOEvYKPwXnlcR4cgKh-4UDmPxHphcoGcPAA5U0mpWFqWj5qcnqSly2HDhv6MuOWcqFHP2Y1F-0RBgbM8StXiBHtWA)
-
+![image](/Problem-Solving/_3image13.png)
   
   
 
-**Solutions to follow on questions:**
+**Solutions to follow on questions**
 
   
 
-![](https://lh3.googleusercontent.com/AIq0qL-ef-La-AqlRNLf5-WvEdN_gxU4jWQxvdjuSLQTWeJrd2k7AoHiEuLENacToNhpWITqUsbtmFfVwFcChDtfMmyUXXaNranMwYag-5oo7fuSKAYUyNYQBdhal3xO3sRFdfGmn49fPT7A4Q)
+![image](/Problem-Solving/_3image14.png)
 
-![](https://lh4.googleusercontent.com/4vAOgFrbAmaBM-2leHJrP-zcllt1T-UBvQJTvDkLdXlxjwtDhwJfHVTMmYcu7ErnRatyeGO3HYMEGQCuWkVjGIKz9HO3-69yr14S__jL3MN4oVa4BfFxIrFtbNgCkzcvG0JwuOVSVXUpNcu2pw)![A screenshot of a cell phone
+![image](/Problem-Solving/_3image15.png)
 
-Description automatically generated](https://lh6.googleusercontent.com/VivsihGWuZN8DwCqHDLcGf8y5qELmMcVEKnDYFDpkX4JDmuCjTL-VbFtnvN5TRc2wXoRlEhykJRed9xpJS2dHGedi7565adcg19XZKBRp633cRwjjMEpKwqdCBVk_3Idz8UFe-lVtCkGDPZZgA)
+![image](/Problem-Solving/_3image16.png)
 
-  
   
   
   
@@ -225,7 +213,7 @@ Description automatically generated](https://lh6.googleusercontent.com/VivsihGWu
   
   
 
-## Paper cutting:
+## Paper cutting
 
   
 
@@ -241,13 +229,12 @@ As, you can see, it's looking more like a pattern based problem. This problem wi
 
   
 
-Example 1:
+**Example 1**
 
-![](https://lh5.googleusercontent.com/eeKEY0mRCqDEvIjA46WfWakZyHND_O75igU6mNHzBN-GZ_hMroxN6nJDpNJgq_z6wxMYq091olLpa0gI-8iQ8mMrjbC6kdJvNjujaELPiDui-PtAy-bOSGpDVYdpGvUxnjFBGMT-LcFaU_x8Jw)
-
+![image](/Problem-Solving/_3image17.png)
   
 
-**How to approach:**
+**How to approach**
 
 Yes, you are thinking right. The best way to solve this question is to take in the consideration the right most half of square and just see if you cut the right half of paper from middle (half), will it be the same as the final output or not. Yes, that’s it. This will give you the correct answer.
 
@@ -255,27 +242,26 @@ Lets see in example 1, and consider only the right half of the paper and visuali
 
   
 
-(This problem will enhance the level of visualisation of yours, as it plays a major role while coding complex questions).
+>(This problem will enhance the level of visualisation of yours, as it plays a major role while coding complex questions).
 
   
 
-**Follow on:**
+**Follow on**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
   
 
-**Follow on Questions and answers:**
+**Follow on Questions and answers**
 
   
 
-![](https://lh6.googleusercontent.com/Wlg1ou1gRAL2INKeJ03GRtWIbh9p-ssOt2osf8koqCpbpg37nFbDId-R5hkPmaCIfo9LwPmcSYy_0XyyUfA9OlLs_2WITlZZHuKBDh_jbsABz6PhaXLRKVnqzaqF7ZSLrf62YWn4OMHiD0suLw)
+![image](/Problem-Solving/_3image18.png)
 
-![](https://lh5.googleusercontent.com/6zYaV0UQ9icopBw--z2fpPZjMfkJlpnu8T6FXYFfyJse8MXQu4XFqbIkytweQJU0pIYRaBO7zMYcfkKYpLar0D7SpJ8mtr8251eoAjRDUlYgEOaL5EgeKCweooPtjVCBQE6kc3pnr3-lAhF2VQ)
+![image](/Problem-Solving/_3image19.png)
 
-![](https://lh3.googleusercontent.com/fzo9y-s_gpQj294hWkiT5Zn-BYGzQdROnUHvOsila2XYUtwFcuGdeJhtVSYKOqU76-EnhLtVn1Ple1LnwobeK7-kJLJgMP0FpzwMmCgtJixu2ATzCKSClxldoXoZOkJPLb56YfAh4QT2E6vGdQ)
-
+![image](/Problem-Solving/_3image20.png)
   
   
   
@@ -289,7 +275,7 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
 ## End of lesson assessment
 
   
-![](https://lh5.googleusercontent.com/xLasnL2goTF9iTdtkKyhS0cPO93m8UFx4AZEkyEHsLI_4chwr3NCxlhtDT_ea6BNFMHPhINg5Utri4KfoC-HBFFsWKSSeODIl3g4Np9ov8XnnI3oZJRQVmMgjBFrvfsdG4U5tmYcfzG8Ob9ZYek)
+![image](/Problem-Solving/_3image21.png)
 
 1.    
     
@@ -297,8 +283,9 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-![](https://lh4.googleusercontent.com/bXJe_nm60NtWrGdkliSSeBV3JH7lzkpDd_xEGhrn_ypseRBaPkJMrduqeL9jpf5L2WlN6NAc_sUYGur-RDZdrTSExjHdzkAVWKsKvXTzCfSKHfEjaybBil3PwAcoSGHdHfC1J1LY4W0FX0erzMI)![](https://lh5.googleusercontent.com/qJ49MSYifjJFJBpbYffJ_VVIrO8BOtzoZi3uy1Vn7j3LDjKg4YUZV8eLuSZjn1I4VqagXvQ-gMRsppG5yB7yuSpXp0xpb6iyw5qV8Y0YzlVqMjumCyOcYUcpoLOaune_kp1xmZ1US5epCj0dQd0)
+![image](/Problem-Solving/_3image22.png)
 
+![image](/Problem-Solving/_3image23.png)
   
 
 2.
@@ -313,12 +300,10 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-![](https://lh5.googleusercontent.com/CzPLOWOhXG581z4e6EyzDDPxumrpE5iEDkp8iE34WvomEOzUR5mJV65vbvI9yHqMjapjCGW5RYSBtI1CYeeCwrtGN0Xi6vn7pMmZHs9ynw8AkAkTmuyNtrEbT_I73dUWfDQOubiZv86bAj-bX2M)
-
+![image](/Problem-Solving/_3image24.png)
   
-
-3. ![](https://lh3.googleusercontent.com/nPLYfl50jiPv5LxC9S2zHmHlkX9_nxr9JSPiVT8HRlJ-NjOgFzQ6GJzsWtoj2-nICJIIWzmYIlO2AV17lpup1R8fuCTU-zZuJOUCVFSMaywTgemg9NzHYxfkHiZRShAhEBOTMM7QaeYnJ5K05_w)
-
+  
+3. ![image](/Problem-Solving/_3image25.png)
   
   
   
