--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -210,18 +210,9 @@ We will take the following sample problem for better understanding:
 
    
 ![image](/Problem-Solving/image4.png)
-- For this the three incorrect possible combinations are:
 
-![image](/Problem-Solving/image5.png)
-- You can see in the first row two numbers are correct and well placed
+![image](/Problem-Solving/addedimage1.png)
 
-  
-
-- You can see in the second row two numbers are correct but wrongly placed
-
-  
-
-- You can see in the Third row Nothing is correct
 
   
   
