feat: Add documentation to adding links (#62)

--- a/Contribution-Guide/docs/Modules.mdx
+++ b/Contribution-Guide/docs/Modules.mdx
@@ -103,3 +103,19 @@ _PDF_
 ### Notes
 
 Passing in the `toc={toc}` option automatically detects if there is other content on the page. If not, the docs viewer takes up the whole page.
+
+## Linking to other pages
+
+### Steps
+
+1. Create a link with the syntax `[<link text>](<url after /courseware>)`
+
+### Example
+
+```md
+[Check out adding submodules](/Contribution-Guide/docs/Adding-Submodules)
+```
+
+### Result
+
+[Check out adding submodules](/Contribution-Guide/docs/Adding-Submodules)
